# task-10-sql

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  insert_data_to_db.py  logging_config.py  main.py  pyproject.toml
src/: __init__.py  app.py  dataclasses.py  routes.py
src/api/: courses.py  dataclass.py  groups.py  init_api.py  students.py
src/cli/: __main__.py  insert_data_to_db.py
src/database/: __init__.py  connection.py  factories.py  fixture.py  helpers.py  models.py
src/database/repositories/: __init__.py  base_repository.py  courses.py  groups.py  student_course.py  students.py
src/swagger/: courses.py  courses.yml  groups.py  groups.yml  init_swagger.py  students.py  students.yml
tests/: conftest.py  helpers.py  test_api_courses.py  test_api_groups.py  test_api_students.py  test_repository_courses.py  test_repository_groups.py  test_repository_student_course.py  test_repository_students.py  test_routes.py  test_student_course.py
