[tool.poetry]
name = "task-10-sql"
version = "0.1.0"
description = ""
authors = ["Sasha Barvynska <alexbarvynska@gmail.com>"]
readme = "README.md"
packages = [{include = "task_10_sql"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
flask = "^2.2.3"
flask-restful = "^0.3.9"
sqlalchemy = "^2.0.9"
peewee = "^3.16.0"
faker = "^18.4.0"
psycopg2 = "^2.9.6"
factory-boy = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
