[tool.poetry]
name = "task-10-sql"
version = "0.1.0"
description = ""
authors = ["Sasha Barvynska <alexbarvynska@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "3.10.0"
requests = "^2.28.2"
flask-restful = "^0.3.9"
sqlalchemy = "^2.0.9"
peewee = "^3.16.0"
faker = "^18.4.0"
factory-boy = "3.2.1"
typer = "^0.9.0"
psycopg2 = "2.9.6"
flask = "2.0.1"
flasgger = "0.9.5"
jsonpickle = "^3.0.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
skip=".gitignore,venv"
multi_line_output = 5
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
atomic = true

[tool.flask.logging]
file = "my_app.log"
level = "INFO"
